--- a/lib/assets/scss/lesli3/layout/application-sidebar.scss
+++ b/lib/assets/scss/lesli3/layout/application-sidebar.scss
@@ -16,6 +16,12 @@ For more information read the license file including with this software.
 */
 
 
+// · variables
+$lesli-sidebar-color-text: findColorInvert($lesli-sidebar-color) !default;
+$lesli-sidebar-hover-text: findColorInvert($lesli-sidebar-hover) !default;
+$lesli-sidebar-hover-color: $lesli-sidebar-hover !default;
+
+
 // · Navigation sidebar
 aside.application-sidebar {
     position: fixed;
