--- a/lib/assets/scss/lesli3/cloud-objects/file.scss
+++ b/lib/assets/scss/lesli3/cloud-objects/file.scss
@@ -42,6 +42,12 @@ For more information read the license file including with this software.
   
         .file-container {
             position: relative;
+
+            img:hover, video:hover, iframe:hover,
+            img:focus, video:focus, iframe:focus {
+                transform: scale(1.03);
+                cursor: zoom-in;
+            }
         }
         
         .delete-button {
@@ -62,10 +68,54 @@ For more information read the license file including with this software.
         img {
             width: 95%;
             height: 65%;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
         }
         
         .file-container:hover .delete-button {
             opacity: 1;
+        }
+
+        .file-backdrop {
+            position: fixed;
+            z-index: 40;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        .file-modal {
+            position: fixed;
+            z-index: 100;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+        }
+        
+        .buttons {
+            position: absolute;
+            left: 50%;
+            bottom: 0;
+            transform: translate(-50%, 0%);
+            width: 96%;
+            flex-wrap: nowrap;
+            justify-content: space-between
+        }
+        
+        .nav-buttons {
+            display: flex;
+            justify-content: space-between;
+        }
+        .btn-close {
+            position: absolute;
+            top: 2%;
+            right: 3%;
         }
     }
       
