fix: next_statuses not longer needs a parser

--- a/lib/assets/scss/lesli3/pages/base.scss
+++ b/lib/assets/scss/lesli3/pages/base.scss
@@ -59,7 +59,7 @@ body {
                 width: 180px;
                 &.lesli_cloud-logo,
                 &.lesli_builder-logo {
-                    width: 86px;
+                    height: 100px;
                 }
             }
             p {
