feat: display a tooltip attached to any kind of element

--- a/lib/assets/scss/templates/application3.scss.erb
+++ b/lib/assets/scss/templates/application3.scss.erb
@@ -31,6 +31,7 @@ For more information read the license file including with this software.
 
 // · Loading components, settings and helpers
 @import "./lesli3/helpers/display";
+@import "./lesli3/helpers/tooltip";
 @import "./lesli3/fonts/remixicons";
 @import "./lesli3/fonts/families";
 @import "./lesli3/fonts/mdicons";
