fix: change logo path from devise viewss

--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -48,7 +48,7 @@ For more information read the license file including with this software.
         <div class="hero-body is-paddingless">
             <div class="container has-text-centered">
 
-                <%= image_tag "lesli_cloud/brand/app-logo.svg", :alt => "Lesli logo" %>
+                <%= image_tag "#{ lesli_instance_code }/brand/app-logo.svg", :alt => "Lesli logo" %>
 
                 <% if flash[:danger] %>
                     <% flash.each do |type, msg| %>
