--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -38,7 +38,7 @@ For more information read the license file including with this software.
     <section class="hero is-fullheight">
         <div class="hero-head">
             <div class="form-title has-text-centered">
-                <%= image_tag "lesli_cloud/brand/app-logo.svg", :alt => "logo", :class => "app-logo" %>
+                <%= image_tag "#{ lesli_instance_code }/brand/app-logo.svg", :alt => "logo", :class => "app-logo" %>
                 <h2 class="is-size-2">Cambiar contraseña</h2>
             </div>
         </div>
