feat: users show

--- a/lib/assets/scss/lesli/settings/variables.scss.erb
+++ b/lib/assets/scss/lesli/settings/variables.scss.erb
@@ -122,6 +122,7 @@ body.layout-expanded {
 
 
 // · generic variables (aliases)
+$primary: $lesli-color-primary;
 $color-primary: $lesli-color-primary;
 $color-header: $lesli-header-color;
 $color-footer: $lesli-footer-color;
