--- a/app/assets/stylesheets/administration/application.scss
+++ b/app/assets/stylesheets/administration/application.scss
@@ -26,7 +26,7 @@ For more information read the license file including with this software.
 // · users management & user profile 
 body.cloud_administration-users, 
 body.cloud_administration-profile {
-    @import "../users.scss";
+    @import "../users";
 }
 
 
