--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,9 +16,8 @@ For more information read the license file including with this software.
 // · 
 */
 
-
 // · 
-div.information {
+div.information-card {
     figure {
         display: flex;
         align-items: center;
