--- a/lib/assets/scss/lesli/panels/panel-profile.scss
+++ b/lib/assets/scss/lesli/panels/panel-profile.scss
@@ -21,7 +21,7 @@ For more information read the license file including with this software.
 .lesli-panel-profile {
 
     .lesli-panel-background {
-        display: none !important;
+        background: rgba(230, 230, 230, .2);
     }
 
     .lesli-panel-content {
