--- a/lib/assets/scss/templates/application.scss.erb
+++ b/lib/assets/scss/templates/application.scss.erb
@@ -156,4 +156,4 @@ h6 {
 
 // · Import theme overrides from builder engine
 // · see: https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
-@import "<%= LC::System::Info.sass_instance_file('theme') %>";
+@import "<%= Lesli::System.sass_instance_file('theme') %>";
