--- a/app/assets/stylesheets/users/passwords.scss
+++ b/app/assets/stylesheets/users/passwords.scss
@@ -18,4 +18,4 @@ For more information read the license file including with this software.
 
 
 // ·
-@import "lesli/pages/users/passwords.scss.erb";
+@import "pages/users/passwords.scss.erb";
