--- a/app/assets/stylesheets/mfas.scss
+++ b/app/assets/stylesheets/mfas.scss
@@ -18,4 +18,4 @@ For more information read the license file including with this software.
 
 
 // ·
-@import "lesli/pages/mfas.scss";
+@import "pages/mfas.scss";
