--- a/app/assets/stylesheets/otps.scss
+++ b/app/assets/stylesheets/otps.scss
@@ -18,4 +18,4 @@ For more information read the license file including with this software.
 
 
 // ·
-@import "lesli/pages/otps.scss";
+@import "pages/otps.scss";
