--- a/app/assets/stylesheets/passes.scss
+++ b/app/assets/stylesheets/passes.scss
@@ -18,4 +18,4 @@ For more information read the license file including with this software.
 
 
 // ·
-@import "lesli/pages/passes.scss";
+@import "pages/passes.scss";
