--- a/app/views/layouts/components/_sidebar-administration.html.erb
+++ b/app/views/layouts/components/_sidebar-administration.html.erb
@@ -35,6 +35,7 @@ Building a better future, one line of code at a time.
 <%= navigation_item(main_app.account_integrations_path, I18n.t("core.shared.sidebar_nav_integrations"), "ri-plug-line"); %>
 
 <%#= navigation_item(main_app.descriptors_path, "Role descriptors", "ri-shield-check-line"); %>
+<%= navigation_item(main_app.roles_path, I18n.t("core.shared.sidebar_nav_roles_privileges"), "ri-shield-user-line"); %>
 <%#= navigation_item(main_app.roles_path, I18n.t("core.shared.sidebar_nav_feedback"), "ri-feedback-line"); %>
 
 <%= navigation_item(main_app.security_account_settings_path, I18n.t("core.account/settings.view_tab_title_security_settings"), "ri-lock-line"); %>
