--- a/lib/assets/scss/lesli/settings/variables.scss.erb
+++ b/lib/assets/scss/lesli/settings/variables.scss.erb
@@ -22,12 +22,12 @@ For more information read the license file including with this software.
 
 
 // · Lesli main theme definition, 
-$lesli-color-primary: <%= Lesli::System.theme(:color_primary, "#112A62") %> !default;
+$lesli-color-primary: <%= Lesli::System.theme(:color_primary, "#193d8d") %> !default;
 $lesli-header-color: <%= Lesli::System.theme(:color_header, "transparent") %> !default;
 $lesli-footer-color: <%= Lesli::System.theme(:color_footer, "transparent") %> !default;
-$lesli-sidebar-color: <%= Lesli::System.theme(:color_sidebar, "#112A62") %> !default;
-$lesli-sidebar-hover: <%= Lesli::System.theme(:color_sidebar_hover, "#172347") %> !default;
-$lesli-color-background: <%= Lesli::System.theme(:color_background, "#F0F8FF") %> !default;
+$lesli-sidebar-color: <%= Lesli::System.theme(:color_sidebar, "transparent") %> !default;
+$lesli-sidebar-hover: <%= Lesli::System.theme(:color_sidebar_hover, "#d1deff") %> !default;
+$lesli-color-background: <%= Lesli::System.theme(:color_background, "#fbf7f4") %> !default;
 
 
 // · To understand more about customization go to:
