--- a/lib/assets/scss/lesli/bulma/loader.scss
+++ b/lib/assets/scss/lesli/bulma/loader.scss
@@ -19,7 +19,7 @@ For more information read the license file including with this software.
 
 
 // · 
-$primary: $lesli-color-primary;
+//$primary: $lesli-color-primary;
 
 
 // · Border radius
