fix: assets for production precompilation

--- a/lib/assets/scss/lesli/settings/variables.scss.erb
+++ b/lib/assets/scss/lesli/settings/variables.scss.erb
@@ -30,6 +30,7 @@ $lesli-sidebar-hover: <%= Lesli::System.theme(:color_sidebar_hover, "#d1deff") %
 $lesli-color-background: <%= Lesli::System.theme(:color_background, "#fbf7f4") %> !default;
 
 
+
 // · To understand more about customization go to:
 // · https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
 
@@ -51,7 +52,7 @@ $lesli-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08)
 
 
 // · generic variables (aliases)
-$primary: $lesli-color-primary;
+//$primary: $lesli-color-primary;
 $color-primary: $lesli-color-primary;
 $color-header: $lesli-header-color;
 $color-footer: $lesli-footer-color;
