--- a/lib/assets/scss/templates/component.scss.erb
+++ b/lib/assets/scss/templates/component.scss.erb
@@ -22,4 +22,4 @@ For more information read the license file including with this software.
 
 
 // · Configuration & variables
-@import "./lesli/settings/variables";
+@import "lesli/settings/variables";
