--- a/lib/assets/scss/templates/pdf.scss
+++ b/lib/assets/scss/templates/pdf.scss
@@ -20,10 +20,11 @@ For more information read the license file including with this software.
 // · 
 @import "lesli-css";
 
-
+/*
 // · Configuration & variables
 @import "./lesli/settings/variables";
 
 
 // · Load specific bulma components
 @import "bulma/bulma.sass";
+*/
