feat: add new standard to define db tables relation

--- a/lib/assets/scss/lesli/settings/variables.scss.erb
+++ b/lib/assets/scss/lesli/settings/variables.scss.erb
@@ -52,13 +52,15 @@ $lesli-box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08)
 
 
 // · generic variables (aliases)
-//$primary: $lesli-color-primary;
+$primary: $lesli-color-primary;
 $color-primary: $lesli-color-primary;
 $color-header: $lesli-header-color;
 $color-footer: $lesli-footer-color;
 $color-sidebar: $lesli-sidebar-color;
 $color-background: $lesli-color-background;
 
+
+$family-primary: "Open Sans", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 // · here we prioritize css variables defined dynamically in the header
 // · those variable values come from the database in the account_settings table
