--- a/lib/assets/scss/templates/public.scss.erb
+++ b/lib/assets/scss/templates/public.scss.erb
@@ -20,15 +20,14 @@ For more information read the license file including with this software.
 // · 
 @import "lesli-css";
 
-/*
+
 // · Configuration
-@import "./lesli/fonts/families";
-@import "./lesli/fonts/remixicons";
-@import "./lesli/settings/variables";
+@import "lesli/fonts/remixicons";
+@import "lesli/settings/variables";
 
 
 // · Include Bulma 
-@import "./lesli/bulma/loader";
+@import "lesli/bulma/loader";
 
 
 // · Include Lesli Standards
@@ -57,4 +56,3 @@ h1 {
 [v-cloak] {
     display: none !important;
 }
-*/
