--- a/lib/assets/scss/pages/auth.scss
+++ b/lib/assets/scss/pages/auth.scss
@@ -81,6 +81,10 @@ body {
             input[type="submit"] {
                 font-weight: 600;
             }
+            input[type="password"] {
+                font-family: Verdana;
+                letter-spacing: 0.125em;
+            }
             p.help {
                 font-weight: 600;
             }
