--- a/lib/templates/scss/assets/stylesheet.scss
+++ b/lib/templates/scss/assets/stylesheet.scss
@@ -1,4 +1,4 @@
 /*
-<%= File.read(Pathname.new(LESLI_ROOT).join("license")).to_s.force_encoding("ASCII-8BIT") %>
+<%= File.read(Pathname.new(LESLI_ROOT).join("lesli.txt")).to_s.force_encoding("ASCII-8BIT") %>
 */
 @import "lesli/templates/component";
