--- a/app/views/descriptors/index.html.erb
+++ b/app/views/descriptors/index.html.erb
@@ -1,3 +1,4 @@
+<%
 =begin
 
 Lesli
@@ -29,16 +30,5 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 =end
-
-class CreateSystemDescriptors < ActiveRecord::Migration[7.0]
-    def change
-        create_table :system_descriptors do |t|
-            t.string :name
-            t.string :category
-            t.datetime :deleted_at, index: true
-            t.timestamps
-        end
-
-        add_reference(:system_descriptors, :system_controller, foreign_key: { to_table: :system_controllers })
-    end
-end
+%>
+<router-view></router-view>
