--- a/app/views/descriptor/privileges/index.html.erb
+++ b/app/views/descriptor/privileges/index.html.erb
@@ -1,3 +1,4 @@
+<%
 =begin
 
 Lesli
@@ -29,16 +30,5 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 =end
-
-class CreateRoleDescriptors < ActiveRecord::Migration[7.0]
-    def change
-        create_table :role_descriptors do |t|
-            t.datetime :deleted_at, index: true
-            t.timestamps
-        end
-
-        add_reference(:role_descriptors, :user, foreign_key: { to_table: :users })
-        add_reference(:role_descriptors, :role, foreign_key: { to_table: :roles })
-        add_reference(:role_descriptors, :descriptor, foreign_key: { to_table: :descriptors })
-    end
-end
+%>
+<router-view></router-view>
