--- a/lib/assets/scss/templates/application.scss.erb
+++ b/lib/assets/scss/templates/application.scss.erb
@@ -106,6 +106,7 @@ Building a better future, one line of code at a time.
 @import "lesli/lesli/toggle";
 @import "lesli/lesli/toolbar";
 @import "lesli/lesli/calendar";
+@import "lesli/lesli/card";
 
 
 
