--- a/lib/assets/scss/templates/application.scss.erb
+++ b/lib/assets/scss/templates/application.scss.erb
@@ -136,3 +136,8 @@ h1, h2, h3, h4, h5, h6 {
 // · Import theme overrides from builder engine
 // · see: https://github.com/leitfaden/cloud_development/blob/master/documentation/design/02-theme.md
 @import "<%= Lesli::System.sass_instance_file('theme') %>";
+
+
+
+// · Global standard pages
+@import "pages/dashboards";
