--- a/lib/assets/scss/pages/dashboards.scss
+++ b/lib/assets/scss/pages/dashboards.scss
@@ -1,5 +1,4 @@
 /*
-
 Lesli
 
 Copyright (c) 2023, Lesli Technologies, S. A.
@@ -17,7 +16,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails Development Platform.
+Lesli · Ruby on Rails SaaS development platform.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
@@ -30,8 +29,27 @@ Building a better future, one line of code at a time.
 // · 
 */
 
+// · 
+.dashboard-components {
+    .column {
+        margin-bottom: .6rem;
 
+        div.component-chart {
+            border-radius: .6rem;
+            box-shadow: $lesli-box-shadow;
+            background-color: lesli-css-color(solid, white);
+        }
 
-
-
-
+        // widgets with tables
+        table.lesli-table {
+            box-shadow: $lesli-box-shadow;
+            thead {
+                background-color: transparent;
+                border-bottom: 1px solid lesli-css-color(slate);
+                th {
+                    padding-bottom: 0px;
+                }
+            }
+        }
+    }
+}
