chore: update email templates

--- a/app/views/lesli/emails/user_mailer/invitation_instructions.html.erb
+++ b/app/views/lesli/emails/user_mailer/invitation_instructions.html.erb
@@ -166,6 +166,10 @@ For more information read the license file including with this software.
       <div
          style="height:5px;line-height:5px;"
       >&#8202;</div>
+    
+      <div
+         style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:center;color:#4a5056;"
+      ><h1>Welcome to The Lesli Family!</h1></div>
     <!-- Email content -->
       
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
@@ -238,8 +242,7 @@ For more information read the license file including with this software.
                   
       <div
          style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:18px;line-height:1;text-align:center;color:#4a5056;"
-      ><p>We've received a request to reset your password.</p>
-                    <p>If you didn’t make the request, please ignore this message. Otherwise, you can reset your password using this link:</p></div>
+      ><p>You have been invitated to Lesli, please confirm your email address by clicking the button below:</p></div>
     
                 </td>
               </tr>
@@ -260,7 +263,7 @@ For more information read the license file including with this software.
               <a
                  href="<%= url_for(@app[:host] + @data[:url]) %>" style="display:inline-block;background:#eef6fc;color:#209cee;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:17px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:15px;mso-padding-alt:0px;border-radius:5px;" target="_blank"
               >
-                Click here to reset password
+                Confirm my account
               </a>
             </td>
           </tr>
