--- a/app/views/lesli/emails/user_mailer/welcome.html.erb
+++ b/app/views/lesli/emails/user_mailer/welcome.html.erb
@@ -166,6 +166,10 @@ For more information read the license file including with this software.
       <div
          style="height:5px;line-height:5px;"
       >&#8202;</div>
+    
+      <div
+         style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1;text-align:center;color:#4a5056;"
+      ><h1>Welcome to The Lesli Family!</h1></div>
     <!-- Email content -->
       
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:600px;" width="600" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
@@ -192,6 +196,30 @@ For more information read the license file including with this software.
       >
         <tbody>
           
+              <tr>
+                <td
+                   align="center" style="font-size:0px;padding:10px 25px;word-break:break-word;"
+                >
+                  
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;"
+      >
+        <tbody>
+          <tr>
+            <td  style="width:128px;">
+              
+      <img
+         src="https://cdn.lesli.tech/leslicloud/emails/celebration.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;" width="128" height="auto"
+      />
+    
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+                </td>
+              </tr>
+            
               <tr>
                 <td
                    align="center" style="font-size:0px;padding:0px;word-break:break-word;"
@@ -238,8 +266,12 @@ For more information read the license file including with this software.
                   
       <div
          style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:18px;line-height:1;text-align:center;color:#4a5056;"
-      ><p>We've received a request to reset your password.</p>
-                    <p>If you didn’t make the request, please ignore this message. Otherwise, you can reset your password using this link:</p></div>
+      ><p>
+                        Lesli will help you work with your team on your ideas, projects, and business.
+                    </p>
+                    <p>
+                        We're excited to have you on board!
+                    </p></div>
     
                 </td>
               </tr>
@@ -258,9 +290,9 @@ For more information read the license file including with this software.
                align="center" bgcolor="#eef6fc" role="presentation" style="border:1px solid #209cee;border-radius:5px;cursor:auto;mso-padding-alt:15px;background:#eef6fc;" valign="middle"
             >
               <a
-                 href="<%= url_for(@app[:host] + @data[:url]) %>" style="display:inline-block;background:#eef6fc;color:#209cee;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:17px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:15px;mso-padding-alt:0px;border-radius:5px;" target="_blank"
+                 href="<%= url_for(@app[:host]) %>" style="display:inline-block;background:#eef6fc;color:#209cee;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:17px;font-weight:normal;line-height:120%;margin:0;text-decoration:none;text-transform:none;padding:15px;mso-padding-alt:0px;border-radius:5px;" target="_blank"
               >
-                Click here to reset password
+                Go to your Lesli account
               </a>
             </td>
           </tr>
