feat: add mails

--- a/lib/assets/scss/pages/auth.scss
+++ b/lib/assets/scss/pages/auth.scss
@@ -178,7 +178,7 @@ body {
         background: linear-gradient(0deg, 
             rgba(49, 106, 255, 0.4), 
             rgba(49, 106, 255, 0.4)), 
-            image_url("lesli_builder/login/login-background.jpg");
+            url("lesli/brand/login-background.jpg");
         background-position: center;
         background-size: cover;
     
