feat: update license description

--- a/lib/assets/stylesheets/lesli/framework/settings/variables.scss
+++ b/lib/assets/stylesheets/lesli/framework/settings/variables.scss
@@ -7,6 +7,8 @@ $lesli-footer-color: transparent !default;
 $lesli-sidebar-color: #ffffff !default;
 $lesli-sidebar-hover: #dee7ec !default;
 $lesli-color-background: #eef2f6 !default;
+$lesli-color-background: #f4f9fd !default;
+$lesli-color-background: #f9f5f2 !default;
 
 
 
